--- a/ggCss.css
+++ b/ggCss.css
@@ -1,4 +1,52 @@
 /*gg css*/
+p {
+	font-family: sans-serif;
+	font-size: 13px;
+}
+.feedContent {
+	font-family: sans-serif;
+	font-size: 13px;	
+}
+a .headline-txt, .headline {
+	font-style: italic;
+	font-family: Didot;
+	color: #585858;
+	font-size: 20px;
+	font-weight: 600;
+	text-decoration: none;
+}
+.date {
+	color: #cccccc;
+	font-size: 11px;
+	font-family: sans-serif;
+}
+#feedWrapper ul {
+	list-style: none;
+	padding-left: 2px!important;
+}
+#post_list li {
+	position: relative;
+	width: 300px;
+	margin: 0 auto;
+	padding: .75em 0;
+	overflow: hidden;
+	border-bottom: 1px solid #EEE;
+	font-size: 100%;
+	line-height: 1.4;
+}
+#post_list li .thumb {
+	float: left;
+	margin: 3px 13px 3px 0;
+	display: block;
+}
+#post_list li .text {
+	padding-left: 93px;
+}
+#feedWrapper {
+	right: 0;
+	top: 0;
+	width: 300px;
+}
 
 #main{
 	margin: 0 auto;
@@ -20,11 +68,11 @@ a {
 
 h1{
 	font-family: Garamond;
-	font-size: 20pt;}
+	font-size: 20px;}
 
 h2{
 	font-family: Garamond;
-	font-size: 17pt;}
+	font-size: 17px;}
 
 .welcome {
 	float: right;
@@ -39,10 +87,12 @@ h2{
 	border: 1px blue solid;
 }
 
-p.welcome{
+.welcome p{
 	font-family: arial;
-	font-size: 15pt;
-	text-align: left;}
+	font-size: 15px;
+	text-align: left;
+	padding: 10px;
+}
 
 li{
 	display: inline;}
