--- a/styles/gng.css
+++ b/styles/gng.css
@@ -7,6 +7,14 @@ p {
 	font-family: sans-serif;
 	font-size: 13px;	
 }
+
+.header {
+	margin: 0 auto; 
+	width: 1024px;
+	height: 180px;
+	background-color: #000;
+}
+
 .headline-txt a, .headline {
 	font-family: Arial;
 	color: #EEE;
