--- a/styles/gng.css
+++ b/styles/gng.css
@@ -26,6 +26,13 @@ p {
 	font-family: Arial;
 	font-size: 12px;
 }
+
+.headline-txt {
+	font-size: 14px;
+	font-family: Garamond;
+	color: #999;
+}
+
 .date {
 	color: #cccccc;
 	font-size: 11px;
@@ -33,7 +40,7 @@ p {
 }
 #feedWrapper ul {
 	list-style: none;
-	padding-left: 2px;
+	padding-left: 0px;
 	margin-top: 0px;
 	height: 250px;
 	overflow-y: auto;
@@ -55,7 +62,7 @@ p {
 	display: block;
 }
 #post_list li .text, #tweet_list li .text {
-	padding-left: 8px;
+	padding-left: 0px;
 	width: 285px;
 }
 #feedWrapper {
@@ -101,7 +108,6 @@ p {
 }
 
 .selectedNav {
-
 	border-bottom: 7px solid #999;
 }
 
@@ -114,6 +120,14 @@ body {
 	background-color: white;
 	margin: 0px;
 	padding: 0px;
+}
+
+#selected {
+	opacity: 0.4;
+}
+
+.profilePic .floatTxt:hover {
+	opacity: 0.4;
 }
 
 .floatTxt {
@@ -232,15 +246,14 @@ li{
 }
 
 .bottomNav ul {
-	border-top: 3px double #999;
+	border-top: 1px solid #999;
 }
 
 .bottomInfo {
-	padding: 0 15px 15px 15px;
+	padding: 0 15px 15px 0;
 	margin: 0px 0px 0px 0px;
 	text-align: left;
-	width: 910px;
-	clear: both;
+	width: 600px;
 }
 
 .bottomInfo div {
@@ -267,7 +280,33 @@ a.bottominfo {
 	width: 910px;
 	padding: 10px;
 	margin: 0px auto 0px auto;
-	border-top: 3px double #999;
-	border-bottom: 3px double #999;
+	border-top: 1px solid #999;
+	border-bottom: 1px solid #999;
 	text-align: center;
+}
+
+.form-input-field {
+	background: #f4f4f4;
+	width: 98%;
+}
+
+label {
+	font-family: Garamond;
+	font-size: 12px;
+	color: #666;
+	letter-spacing: 2px;
+}
+
+.form-input-button {
+	background-color: #333;
+	opacity: 0.9;
+	color: #FFF;
+	font-family: Garamond;
+	font-weight: 400;
+	font-style: italic;
+	font-size: 20px;
+	border: 0px;
+	letter-spacing: 3px;
+	width: 90px;
+	padding: 10px;
 }
