--- a/styles/gng.css
+++ b/styles/gng.css
@@ -44,7 +44,7 @@ p {
 	font-size: 11px;
 	font-family: sans-serif;
 }
-#feedWrapper ul {
+#feedWrapper ul, #feedWrapper2 ul  {
 	list-style: none;
 	padding-left: 0px;
 	margin-top: 0px;
@@ -71,7 +71,7 @@ p {
 	padding-left: 0px;
 	width: 285px;
 }
-#feedWrapper {
+#feedWrapper, #feedWrapper2 {
 	right: 0;
 	top: 0;
 	width: 300px;
@@ -104,7 +104,7 @@ p {
 
 #feedWrapperBlog #post_list li .text {
 	padding-left: 8px;
-	width: 580px;
+	width: 550px;
 }
 
 #main{
@@ -244,6 +244,7 @@ li{
 	text-align: center;
 	color: #666;
 	letter-spacing: 3px;
+	font-family: Garamond;
 }
 
 .nav ul a, .bottomNav ul a {
@@ -261,6 +262,8 @@ li{
 	text-align: left;
 	width: 600px;
 }
+
+
 
 .bottomInfo div {
 	width: 300px;
@@ -313,4 +316,8 @@ label {
 	letter-spacing: 3px;
 	width: 90px;
 	padding: 10px;
+}
+
+a {
+	border: none;
 }
