--- a/styles/gng.css
+++ b/styles/gng.css
@@ -130,15 +130,18 @@ body {
 
 #selected {
 	opacity: 0.4;
+	filter:alpha(opacity=40);
 }
 
 .profilePic .floatTxt:hover {
 	opacity: 0.4;
+	filter:alpha(opacity=40);
 }
 
 .floatTxt {
 	background-color: #333;
 	opacity: 0.9;
+	filter:alpha(opacity=90);
 	color: #FFF;
 	font-family: Garamond;
 	font-weight: 400;
@@ -307,6 +310,7 @@ label {
 .form-input-button {
 	background-color: #333;
 	opacity: 0.9;
+	filter:alpha(opacity=90);
 	color: #FFF;
 	font-family: Garamond;
 	font-weight: 400;
