--- a/styles/gng.css
+++ b/styles/gng.css
@@ -33,6 +33,14 @@ p {
 	color: #999;
 }
 
+#feedWrapperBlog .headline-txt {
+	font-style: italic;
+	font-size: 32px;
+	color: #333;
+	font-weight: 800;
+	letter-spacing: 1px;
+}
+
 .copy-txt , .copy-txt  a{
 	font-size: 14px;
 	font-family: Garamond;
