--- a/styles/gng.css
+++ b/styles/gng.css
@@ -144,6 +144,7 @@ body {
 	background-color: white;
 	margin: 0px;
 	padding: 0px;
+	color: #666;
 }
 
 #selected {
@@ -236,7 +237,7 @@ h2{
 	font-family: arial;
 	font-size: 15px;
 	text-align: left;
-	
+	color: #666;
 }
 
 .socialLink:hover {
